# Copyright 2018 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzzers") {
  testonly = true
  deps = [
    ":spvtools_validate_fuzzer_src",
  ]
}

template("spvtools_fuzzer") {
  source_set(target_name) {
    sources = invoker.sources
    deps = [
      "../..:spvtools",
    ]
    if (defined(invoker.deps)) {
      deps += invoker.deps
    }
    testonly = true
    configs -= [ "//build/config/compiler:chromium_code" ]
    configs += [ "//build/config/compiler:no_chromium_code" ]
  }
}

spvtools_fuzzer("spvtools_validate_fuzzer_src") {
  sources = [
    "spvtools_validate_fuzzer.cpp",
  ]
}
